<resources>
    <string name="app_name">IguDif</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">Delete</string>
    <string name="show">Nº tareas restantes</string>
    <string name="deselect_all">Deselect All</string>
    <string name="add_task">Añadir nueva tarea</string>

    <string name="task_name">Nombre de la tarea</string>
    <string name="mandatory">Este campo es obligatorio</string>
    <string name="task_date">Fecha</string>
    <string name="edit">Nueva tarea</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="select_date">Selecciona la fecha</string>

    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre del niñ@</string>
    <string name="emergencyNumber">Número de contacto de emergencia</string>
    <string name="login">Iniciar sesión</string>
    <string name="signin">Registrarse</string>

    <string name="lastTransactions">Últimos movimientos</string>
    <string name="points">Puntos disponibles</string>
</resources>
